--- a/register.html
+++ b/register.html
@@ -121,6 +121,27 @@
                             <p>+44 20 8316 1372</p>
                         </li>
                     </ul>
+                    <ul class="social mt-4">
+                        <li>
+                            <a href="#facebook" data-toggle="tooltip" title="Facebook" target="_blank">
+                                <i class="fa fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li><a href="#twitter" data-toggle="tooltip" title="Twitter" target="_blank">
+                            <i class="fa fa-twitter"></i>
+                            </a>
+                        </li> 
+                        <li>
+                            <a href="#instagram" data-toggle="tooltip" title="Instagram" target="_blank">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                        </li> 
+                        <li>
+                            <a href="tripadvisor" data-toggle="tooltip" title="Tripadvisor" target="_blank">
+                                <i class="fa fa-tripadvisor"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col-md-3 opening_time">
                     <h4>
